[gd_scene load_steps=4 format=3 uid="uid://o4txuljx08kp"]

[ext_resource type="Script" uid="uid://beg4bh3od0mbb" path="res://scripts/dress up/components/flavor_button.gd" id="1_e6lbq"]
[ext_resource type="Texture2D" uid="uid://bcv3ta018v5w7" path="res://assets/sprites/clothing panel/button.png" id="2_7dq54"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7hxdv"]
size = Vector2(16, 16)

[node name="FlavorButton" type="Node2D"]
script = ExtResource("1_e6lbq")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_7dq54")
centered = false

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(8, 8)
shape = SubResource("RectangleShape2D_7hxdv")

[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
